added second MS chapter story

--- a/_posts/projects/2019-02-26-nhr1.md
+++ b/_posts/projects/2019-02-26-nhr1.md
@@ -7,7 +7,7 @@ meta:
   keywords: "nonhost resistance, brachypodium, wheat stem rust, bulked segregant analysis"
 
 project:
-  title: "The complex genetics of nonhost resistance in plants"
+  title: "The complex genetics of nonhost resistance in plants - part 1"
   authors: "<a href='https://rdcoletta.github.io/'>Della Coletta R</a>, Hirsch CN, Rouse MN, Lorenz A, Garvin DF"
   type: "Master's project"
   url: "https://apsjournals.apsnet.org/doi/full/10.1094/MPMI-08-18-0220-R"
