fixed nam markdown

--- a/_posts/projects/2021-08-06-nam.md
+++ b/_posts/projects/2021-08-06-nam.md
@@ -7,7 +7,7 @@ meta:
   keywords: "nonhost resistance, brachypodium, wheat stem rust, bulked segregant analysis"
 
 project:
-  title: "Maize pangenome"
+  title: "Maize pan-genome"
   authors: "Hufford MB, Seetharam AS, Woodhouse MR, Chougule KM, Ou S, Liu J, Ricci WA, Guo T, Olson A, Qiu Y, <a href='https://rdcoletta.github.io/'>Della Coletta R</a> et al."
   type: "(Massive) Collaborative project"
   url: "https://www.science.org/doi/10.1126/science.abg5289"
@@ -29,4 +29,4 @@ images:
     url: "/assets/images/projects/nam/karyo.png"
     alt: "Loci associated with nonhost resistance"
 ---
-<p> In this large collaborative project, the genome of 26 maize lines were sequenced and assembled in an effort to build the maize pan-genome. One of the main results of this projects was that combining structural variants (SVs) and SNPs from this pan-genome increased the power of mapping studies like GWAS. In order to do these tests, I had to project SV information from the all maize lines to their ~5,000 recombinant lines using the TASSEL software. Nearly 95% of all SVs were projected with accuracy of 92%. The complete step-by-step can be found in this <a href="https://github.com/HuffordLab/NAM-genomes/blob/master/structural-variation/projecting-svs.md">GitHub page</a>.</p>
+<p>In this large collaborative project, the genome of 26 maize lines were sequenced and assembled in an effort to build the maize pan-genome. One of the main results of this projects was that combining structural variants (SVs) and SNPs from this pan-genome increased the power of mapping studies like GWAS. In order to do these tests, I had to project SV information from the all maize lines to their ~5,000 recombinant lines using the TASSEL software. Nearly 95% of all SVs were projected with accuracy of 92%. The complete step-by-step can be found in this <a href="https://github.com/HuffordLab/NAM-genomes/blob/master/structural-variation/projecting-svs.md">GitHub page</a>.</p>
