added legends to figures

--- a/_posts/projects/2019-02-26-nhr2.md
+++ b/_posts/projects/2019-02-26-nhr2.md
@@ -25,9 +25,11 @@ images:
   - image:
     url: "/assets/images/projects/nhr2/brachy.png"
     alt: ""
+    desc: "Resistant Bd21 Brachy genotype (A) and its susceptible mutant (B)"
   - image:
     url: "/assets/images/projects/nhr2/reads.png"
     alt: ""
+    desc: "Sequencing reads aligned to the reference genome showing a 1-bp deletion in the mutant genome (yellow)"
 ---
 <p>
 In addition to analyzing natural genetic diversity of Brachypodium to wheat stem rust resistance, I also investigated Brachypodium mutants that showed compromised resistance compared to their respective resistant wild type. After sequencing resistant and susceptible pools of plants from a cross between Bd21 (resistant) and a Bd21-derived mutant (susceptible), I start digging into the Brachy genome to find the causative mutation. Since I didn't find any major deviation in allele frequencies of SNPs from resistant and susceptible pools, I called structural variants (i.e. deletions, insertions, duplications, inversions, and translocations) using three different bioinformatics tools. After analyzing this data, I found a 1 base pair deletion present only in the sequenced susceptible plants that introduces a premature stop codon in the gene Bradi1g24100. This gene is a homolog of the Arabidopsis thaliana gene TIME FOR COFFEE (TIC), a circadian clock regulator that has also been shown to increase susceptibility to the bacterial pathogen Pseudomonas syringae.</p>
