--- a/_posts/projects/2021-08-06-nam.md
+++ b/_posts/projects/2021-08-06-nam.md
@@ -24,9 +24,11 @@ journal:
 images:
   - image:
     url: "/assets/images/projects/nam/pan.png"
-    alt: "Brachy plants inoculated with stem rust"
+    alt: "Plots summarizing the maize pan-genome"
+    desc: "Summary of the maize pan-genome"
   - image:
     url: "/assets/images/projects/nam/karyo.png"
-    alt: "Loci associated with nonhost resistance"
+    alt: "Karyoplot"
+    desc: "Karyotype of a maize line after projection (green/purple represent which parent a structural variant came from, and yellow represents heterozygous calls)"
 ---
 <p>In this large collaborative project, the genome of 26 maize lines were sequenced and assembled in an effort to build the maize pan-genome. One of the main results of this projects was that combining structural variants (SVs) and SNPs from this pan-genome increased the power of mapping studies like GWAS. In order to do these tests, I had to project SV information from the all maize lines to their ~5,000 recombinant lines using the TASSEL software. Nearly 95% of all SVs were projected with accuracy of 92%. The complete step-by-step can be found in this <a href="https://github.com/HuffordLab/NAM-genomes/blob/master/structural-variation/projecting-svs.md">GitHub page</a>.</p>
