included paper title and doi

--- a/_posts/projects/2019-02-26-nhr1.md
+++ b/_posts/projects/2019-02-26-nhr1.md
@@ -7,9 +7,11 @@ meta:
   keywords: "nonhost resistance, brachypodium, wheat stem rust, bulked segregant analysis"
 
 project:
-  title: "The complex genetics of nonhost resistance in plants - part 1"
+  title: "Nonhost resistance in plants - part I"
+  paper: "Genomic dissection of nonhost resistance to wheat stem rust in <em>Brachypodium distachyon</em>"
   authors: "<a href='https://rdcoletta.github.io/'>Della Coletta R</a>, Hirsch CN, Rouse MN, Lorenz A, Garvin DF"
   type: "Master's project"
+  doi: "10.1094/MPMI-08-18-0220-R"
   url: "https://apsjournals.apsnet.org/doi/full/10.1094/MPMI-08-18-0220-R"
   logo: "/assets/images/projects/nhr1/logo.png"
   logo-cc: "credits: Rafael Della Coletta"
