--- a/_posts/projects/2019-02-26-nhr2.md
+++ b/_posts/projects/2019-02-26-nhr2.md
@@ -7,9 +7,11 @@ meta:
   keywords: "nonhost resistance, brachypodium, wheat stem rust, bulked segregant analysis"
 
 project:
-  title: "The complex genetics of nonhost resistance in plants - part 2"
+  title: "Nonhost resistance in plants - part II"
+  paper: "A homolog of the <em>Arabidopsis TIME FOR COFFEE</em> gene is involved in nonhost resistance to wheat stem rust in <em>Brachypodium distachyon</em>"
   authors: "<a href='https://rdcoletta.github.io/'>Della Coletta R</a>, Lavell AA, Garvin DF"
   type: "Master's project"
+  doi: "10.1094/MPMI-06-21-0137-R"
   url: "https://apsjournals.apsnet.org/doi/10.1094/MPMI-06-21-0137-R"
   logo: "/assets/images/projects/nhr2/logo.png"
   logo-cc: "credits: Rafael Della Coletta"
