--- a/_posts/projects/2021-08-06-nam.md
+++ b/_posts/projects/2021-08-06-nam.md
@@ -4,12 +4,14 @@ permalink: /:title/
 category: projects
 
 meta:
-  keywords: "nonhost resistance, brachypodium, wheat stem rust, bulked segregant analysis"
+  keywords: "maize, pan-genome, structural variants"
 
 project:
   title: "Maize pan-genome"
+  paper: "De novo assembly, annotation, and comparative analysis of 26 diverse maize genomes"
   authors: "Hufford MB, Seetharam AS, Woodhouse MR, Chougule KM, Ou S, Liu J, Ricci WA, Guo T, Olson A, Qiu Y, <a href='https://rdcoletta.github.io/'>Della Coletta R</a> et al."
   type: "(Massive) Collaborative project"
+  doi: "10.1126/science.abg5289"
   url: "https://www.science.org/doi/10.1126/science.abg5289"
   logo: "/assets/images/projects/nam/logo.png"
   logo-cc: "credits: Jason Wallace, CC BY-SA 4.0, via Wikimedia Commons"
