--- a/_posts/projects/2019-02-26-nhr1.md
+++ b/_posts/projects/2019-02-26-nhr1.md
@@ -33,4 +33,4 @@ images:
     alt: "Loci associated with nonhost resistance"
     desc: "Loci associated with nonhost resistance"
 ---
-<p>During my Master's, I analyzed whole genome sequencing data to identify regions in the Brachypodium genome associated with resistance to wheat stem rust. After sequencing resistant and susceptible plants and mapping reads back to Brachy's reference genome, I called SNP variants and visualized their frequencies of along Brachy's chromosomes. As a result, I could see 7 regions with very distinct patterns of allele frequencies between the two pools of individuals, indicating that such regions may be associated with resistance to wheat stem rust. Finally, I performed Z-tests and determined that 6 of these loci were statistically signficant, with 2 of them explaining more than 30% of phenotypic variation.</p>
+<p>During my Master's, I analyzed whole-genome sequencing data to identify regions in the <em>Brachypodium</em> genome associated with resistance to wheat stem rust. After sequencing resistant and susceptible plants and mapping reads back to Brachy's reference genome, I called SNP variants and visualized their frequencies along Brachy's chromosomes. As a result, I could see 7 regions with very distinct patterns of allele frequencies between the two pools of individuals, indicating that such regions may be associated with resistance to wheat stem rust. Finally, I performed Z-tests and determined that 6 of these loci were statistically significant, with 2 of them explaining more than 30% of phenotypic variation.</p>
