--- a/_posts/projects/2021-04-21-wsr.md
+++ b/_posts/projects/2021-04-21-wsr.md
@@ -29,4 +29,4 @@ images:
     alt: ""
     desc: "Networks containing orthologs of DMR6, a candidate susceptibility gene, in a susceptible wheat variety, resistant wheat variety and Brachypodium distachion"
 ---
-<p> During my Master's, I analyzed genomic data from <em>Brachypodium distachyon</em> to identify regions associated with non-host resistance to wheat stem rust. For this collaborative project, I built gene co-expression networks from wheat and Brachypodium transcriptomic data to link candidate susceptibility genes (identified by differential expression analysis) with their biological pathways. This approach allowed us to identify potential targets for future gene editing studies. Removing or modifying these putative susceptibility genes could result in a new way to generate wheat plants resistant to stem rust. The step-by-step of the network analysis can be found in this <a href='https://github.com/rdcoletta/stem-rust_networks'>Github page</a>.</p>
+<p> During my Master's, I analyzed genomic data from <em>Brachypodium distachyon</em> to identify regions associated with non-host resistance to wheat stem rust. For this collaborative project, I built gene co-expression networks from wheat and Brachypodium transcriptomic data to link candidate susceptibility genes (identified by differential expression analysis) with their biological pathways. This approach allowed us to identify potential targets for future gene editing studies. Removing or modifying these putative susceptibility genes could result in a new way to generate wheat plants resistant to stem rust. The step-by-step of the network analysis can be found on this <a href='https://github.com/rdcoletta/stem-rust_networks'>Github page</a>.</p>
