--- a/_posts/projects/2021-06-29-te-pop.md
+++ b/_posts/projects/2021-06-29-te-pop.md
@@ -33,4 +33,4 @@ images:
     alt: ""
     desc: "LD between TEs and SNPs per TE category"
 ---
-<p>Transposable elements (TEs), or "jumping genes", are hard to study due to their repetitive nature and abundance in crop genomes. However, things get even more complicated when using short-read sequencing data to caracterize them in a population. In this study, we implemented a machine learning method to classify the presence and absence of TEs in a diversity panel with 500+ maize lines. By calculating linkage disequilibrium (LD) between TEs and single nucleotide polymorphisms (SNPs), I observed that nearly 20% of the TEs were not being tagged by a SNP. This result potentially represent information that has not been well captured in previous SNP-based marker-trait association studies. The step-by-step of the LD analysis can be found in this <a href='https://github.com/HirschLabUMN/TE_variation/tree/master/TE-SNP_LD_methods'>Github page</a>.</p>
+<p>Transposable elements (TEs), or "jumping genes", are hard to study due to their repetitive nature and abundance in crop genomes. However, when using short-read sequencing data to characterize them in a population, things get even more complicated. In this study, we implemented a machine learning method to classify the presence and absence of TEs in a diversity panel with 500+ maize lines. By calculating linkage disequilibrium (LD) between TEs and single nucleotide polymorphisms (SNPs), I observed that nearly 20% of the TEs were not being tagged by an SNP. This result potentially represents information that has not been well captured in previous SNP-based marker-trait association studies. The step-by-step of the LD analysis can be found on this <a href='https://github.com/HirschLabUMN/TE_variation/tree/master/TE-SNP_LD_methods'>Github page</a>.</p>
